<resources>
    <string name="app_name">Car App</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="full_name_field_hint">Enter your full name</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">SignUp</string>
    <string name="go_login_button_text">Go To Login</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>
    <string name="logout_button_text">Logout</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--main-->
    <string name="locate_user">Locate User</string>
</resources>
